Hidden flag fix